# ona-oidc

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  .travis.yml.disabled  LICENSE  MANIFEST.in  Pipfile  README.md  manage.py  mypy.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
oicd/: __init__.py  apps.py  client.py  settings.py  urls.py  viewsets.py
oicd/templates/: oidc_user_data_entry.html
oidc/: __init__.py  admin.py  apps.py  client.py  forms.py  settings.py  urls.py  utils.py  viewsets.py
oidc/templates/admin/auth/user/: import_form.html  import_user.html
oidc/templates/oidc/: oidc_missing_detail.html  oidc_unrecoverable_error.html  oidc_user_data_entry.html
tests/: settings.py  test_client.py  test_urls.py  test_utils.py  test_viewsets.py  urls.py
tests/admin/: test_import_user.py  urls.py
tests/templates/: base.html
