[metadata]
name = ona-oidc
version = 1.0.1
description = Ona OpenID Connect Client
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/onaio/ona-oidc
author = Ona Systems Inc
author_email = support@ona.io
license = Copyright (c) 2022 Ona Systems Inc All rights reserved
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/onaio/ona-oidc
    Tracker = https://github.com/onaio/ona-oidc/issues

[options]
packages = find:
platforms = any
tests_require =
    ipdb
    black
    flake8
    mypy
    isort
    pre-commit
    mock
    tox
install_requires =
    Django>=3.2.13,<4
    djangorestframework
    pyjwt[crypto]
    requests
python_requires = >= 3.8
setup_requires =
    setuptools_scm

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1
